# Research-in-Missing-Metrics

./: .gitignore  README.md  lizard_nesting_depth_extraction.ipynb
C/Code Smells Count/: cppcheck_code_smells_extraction.ipynb  requirements.txt
C/Comment-to-Code Ratio/: cloc_comment_to_code_ratio_extraction.ipynb  (+1 more)
Java/: pmd_nesting_depth_extraction.ipynb
Python/MC-DC Coverage/workspace/python-tool-testing-pymcdc/: .gitignore  METRICS_COVERAGE.md  README.md  TESTING_TEAM.md  TRIGGER.md  condition_metric_evidence.json  dashboard_metrics.json  metrics.json  pymcdc_metrics.json  pymcdc_metrics.py  pymcdc_report.json  pymcdc_trigger.py  pyproject.toml  requirements.txt  testable_dashboard.json  validate_metric_coverage.py
Python/MC-DC Coverage/workspace/python-tool-testing-pymcdc/artifacts/training/: logic.py.mdc  pymcdc.json  pymcdc_report.json
Python/MC-DC Coverage/workspace/python-tool-testing-pymcdc/config/: execution_trigger.json  metric_coverage.json  platform_trigger.json
Python/MC-DC Coverage/workspace/python-tool-testing-pymcdc/pymcdc_platform/: __init__.py  __main__.py  cli.py
Python/MC-DC Coverage/workspace/python-tool-testing-pymcdc/sample_subject/: logic.py  test_logic.py
Python/MC-DC Coverage/workspace/python-tool-testing-pymcdc/scripts/: collect_artifacts.py  export_platform_bundle.py  platform_pymcdc_fixup.py  verify_100_percent.py  verify_pymcdc_json.py
Python/MC-DC Coverage/workspace/python-tool-testing-pymcdc/tests/: test_integration_pipeline.py  test_metrics.py  test_platform_fixup.py  test_trigger.py
docs/: missing_metrics_v2 (1).xlsx
(+896 files in other folders)
