[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pymcdc-platform"
version = "1.0.0"
description = "pymcdc wrapper that emits Testable-compatible JSON for Logical Sub-expression Validation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymcdc>=0.2.5",
]

[project.scripts]
pymcdc-platform = "pymcdc_platform.cli:main"

[tool.setuptools.packages.find]
include = ["pymcdc_platform*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
